# dls-image-captioning

./: .gitignore  pyproject.toml
image_captioning/: beheaded_inception3.py  models.py  trainer.py  utils.py
notebooks/: Untitled.ipynb  debug.ipynb  image_captioning.ipynb  trainer.ipynb
notebooks/base part/: Untitled.ipynb  image_captioning.ipynb  model.py  train.py  utils.py
pycocoevalcap/bleu/: bleu.py
pycocoevalcap/cider/: cider_scorer.py
tests/: model.py
