[tool.poetry]
name = "image-captioning"
version = "0.1.0"
description = ""
authors = ["Zurab Nurmagomedov <zurabnurmag@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
torch = "^1.7.1"
torchvision = "^0.8.2"
opencv-python = "^4.5.1"
numpy = "^1.19.5"
torchtext = "^0.8.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
